# sqlmesh-demos

./: README.md  config.yaml  pyproject.toml  requirements.txt
models/: customers.sql  orders.sql
models/staging/: stg_payments.sql
